@@ -11,7 +11,6 @@ envlist =
 commands = 
     python setup.py test -q
 deps =
-    zope.component>=3.8
     zope.configuration
     zope.copy
     zope.interface
@@ -22,7 +21,6 @@ deps =
 commands = 
    jython setup.py test -q
 deps =
-    zope.component>=3.8
     zope.configuration
     zope.copy
     zope.interface
